@@ -223,6 +223,7 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * (bug 17460) Client ecoding is now correctly set for PostgreSQL
 * (bug 17648) Prevent floats from intruding into edit area in previews if no toolbar present
 * (bug 16899) DISPLAYTITLE should allow Arabic and Persian harakats
+* (bug 17692) Added (list of members) link to 'user' in Special:Listgrouprights
 
 == API changes in 1.15 ==
 * (bug 16858) Revamped list=deletedrevs to make listing deleted contributions
